# CPP_Industrial_Mastery

./: .gitignore  CMakeLists.txt  README.md  correr.bat
final_project/include/: Robots.hpp  Sensors.hpp
final_project/src/: main.cpp
include/: Robots.hpp  Sensores.hpp
learning_path/: 01_foundations.cpp  02_polymorphism.cpp  03_modern_cpp.cpp
src/: main.cpp
